Docker/suiteconfig.yaml
apiVersion: v1
kind: Pod
metadata:
  name: suite-config
  labels:
    name: suite-conf-app
spec:
  containers:
  - name: suite-config
    image: shc-nexus-repo.hpeswlab.net:9000/itsma/suite-installer:5a1689f
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 8080
    volumeMounts:
    - name: image-store
      mountPath: /yamls_output
      subPath: suite-install/itsma
  nodeSelector:
    poc: suiteinstaller
  volumes:
  - name: image-store
    persistentVolumeClaim:
      claimName: itom-vol-claim
