Docker/suiteconfig_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: suite-conf-svc
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30001
  # label keys and values that must match in order to receive traffic for this service
  selector:
    name: suite-conf-app
